# ELLMERIntegration

./: .gitignore  Cleanexecuter.py  README.md  SETUP.md  TESTING_LAUNCH_GUIDE.md  debug.txt  debug_coordinates.py  debug_vision_complete.py  detect_and_move.py  frames_2025-09-11_16.02.16.gv  frames_2025-09-11_16.23.45.gv  frames_2025-09-11_16.29.08.gv  frames_2025-09-11_16.31.06.gv  frames_2025-09-11_16.32.03.gv  frames_2025-09-11_18.15.42.gv  install_dependencies.sh  main.py  quick_scan.py  requirements.txt  setup.sh  setup_env.sh  simple_prompt_test.py  test_bottle_detection.py  test_camera_orientation.py  test_can_detection.py  test_comprehensive_scan.py  test_constant_j5.py  test_direct_movement.py  test_fixed_movement.py  test_full_pipeline.py  test_full_workspace_scan.py  test_hardcoded_scan.py  test_intelligent_robot.py  test_j5_alignment.py  test_position_fix.py  test_pure_ai.py  test_rag_prompts.py  test_rag_system.py  test_scan_and_detect.py  test_simple_movement.py  (+5 more)
april_tags_vision/: camera.py  utils.py
arm_config/: safety_config.yaml  world_model.yaml
arm_vision/: world_model.yaml
config/: gripper_config.yaml  gripper_config_xl330.yaml
config/gripper/: gripper_config.yaml
config/llm/: action_schema.md  rag_config.yaml
config/robot/: world_model.yaml
config/vision/: camera_config.yaml
docs/: testing_guide.md
install/: local_setup.sh  setup.sh
install/april_tags_vision/share/april_tags_vision/: package.bash  package.zsh
install/gazebo_plugins/share/gazebo_plugins/: local_setup.sh  package.sh
install/gazebo_ros/share/gazebo_ros/: local_setup.sh  package.sh
install/kortex_examples/share/kortex_examples/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kortex_examples/share/kortex_examples/launch/: record_pose.launch.py  run_motion_bridge.launch.py  run_robot_brain.launch.py
install/my-test-package/share/my-test-package/: package.sh
install/uf_ros_lib/share/uf_ros_lib/: package.sh
install/ufactory_ellmer_msgs/share/ufactory_ellmer_msgs/: package.sh  package.zsh
install/xarm_api/lib/xarm_api/: test_xarm_ros_client  test_xarm_velo_move  xarm_driver_node
install/xarm_api/share/xarm_api/: local_setup.sh  package.sh
install/xarm_controller/share/xarm_controller/: package.sh
install/xarm_description/share/xarm_description/: package.sh
knowledge_base/: robotics_knowledge.py
llm_planning_gemini/: .env.example
llm_planning_gemini /: README.md
llm_planning_gemini /custom_gemini_examples/: README.md  app.py  custom_gpt_action_schema.md  custom_knowledge.md
llm_planning_gemini /haystack_rag_pipelines/: evaluate_models.py  example2.py  generate_questions.py
llm_planning_gemini/custom_gemini_examples/: app.py  custom_gpt_action_schema.md  custom_gpt_instructions.md  planner_llm.py  utils_plan.py  utils_schema.py
llm_planning_gemini/haystack_rag_pipelines/: README.md  custom_knowledge.md  example1.py  generated_questions.json  results.md
llm_planning_gemini/haystack_rag_pipelines/responses/: sample_response_q1.json
log/: latest_build  latest_list
robot_control/: __init__.py  main.py
robot_control/rag_system/: __init__.py  rag_main.py  true_rag_planner.py
robot_control/rag_system/integration/: __init__.py  rag_integration.py
robot_control/rag_system/planner/: __init__.py  intelligent_planner.py  movement_logic.py  rag_planner.py
robot_control/robot_controller/: __init__.py  actions_xarm.prev.py  actions_xarm.py  direct_approach.py  executor.prev.py  executor.py  gripper.py  oldexecutor.py
robot_control/task_planner/: __init__.py  llm_planner.py  planner_llm.py
robot_control/utils/: __init__.py  config_manager.py  logging_utils.py
robot_control/vision_system/: __init__.py  apriltag_bridge.py  pose_recorder.py
ros_workspace/src/april_tags_vision/: CMakeLists.txt  README.md  package.xml
ros_workspace/src/april_tags_vision/april_tags_vision/: __init__.py  april_tag_detector.py
ros_workspace/src/april_tags_vision/config/: april_tags.yaml  cam_hand.yaml
ros_workspace/src/april_tags_vision/launch/: april_tags_detection.launch.py  april_tags_detector.launch.py  april_tags_with_robot.launch.py  complete_system.launch.py  image_proc.launch.py  realsense_camera.launch.py
ros_workspace/src/april_tags_vision/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg
ros_workspace/src/april_tags_vision/scripts/: april_tags_detector_node.py  test_april_tags.py
ros_workspace/src/ufactory_ellmer_msgs/: CMakeLists.txt  package.xml
ros_workspace/src/ufactory_ellmer_msgs/msg/: TargetCoordinatesArray.msg
ros_xarm/: actions_xarm.py  executor.py  pose_recorder.py  record_pose.launch.py
ros_xarm/install/: local_setup.sh  setup.sh
ros_xarm/log/: latest_build
scripts/: README.md  build_and_run.sh  build_april_tags.sh  install_dependencies.sh  launch_complete_system.sh  quick_start.sh  ros2bag_to_csv.py  setup_dynamixel.sh  setup_env.sh  setup_environment.sh  setup_ros2.sh
src/: kortex_examples
src/ufactory_ellmer_msgs/: CMakeLists.txt
src/ufactory_ellmer_msgs/srv/: SetInt16.srv
tests/: debug_vision_complete.py  test_basic_structure.py  test_rag_system.py  test_robot_control.py
(+67 files in other folders)
