<?xml version="1.0"?>
<package format="2">
  <name>kortex_examples</name>
  <version>0.0.1</version>
  <description>ELLMER examples (robot_brain + IK bridge) for UFactory 850</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Use ament_python to build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ufactory_ellmer_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
